# thegathering_backend

./: .dockerignore  .gitignore  Dockerfile  README.md  YAGNI_VERSTOESSE.md  cleanup_silas_test_data.py  create_test_conversations.py  dev_setup.py  docker-compose.test.yml  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  sonar-project.properties
.github/workflows/: ci.yml
app/core/: __init__.py  ai_prompts.py  arq_db_manager.py  arq_pool.py  auth_dependencies.py  auth_utils.py  background_tasks.py  config.py  constants.py  cookie_utils.py  csrf_dependencies.py  database.py  decorators.py  exceptions.py  jwt_utils.py  redis_client.py  utils.py  validators.py
app/dependencies/: provider_dependencies.py
app/implementations/: __init__.py  deepl_translator.py
app/interfaces/: __init__.py  ai_provider.py  embedding_service.py  keyword_extractor.py  memory_retriever.py  memory_summarizer.py  translator.py
app/models/: __init__.py  ai_cooldown.py  ai_entity.py  ai_memory.py  conversation.py  conversation_participant.py  message.py  message_translation.py  room.py  user.py
app/prompts/: persona_builder.py
app/providers/: __init__.py  google_provider.py  openai_provider.py
app/repositories/: ai_cooldown_repository.py  ai_entity_repository.py  ai_memory_repository.py  base_repository.py  conversation_repository.py  message_repository.py  message_translation_repository.py  repository_dependencies.py  room_repository.py  user_repository.py
app/schemas/: ai_schemas.py  auth_schemas.py  chat_schemas.py  common_schemas.py  memory_schemas.py  room_schemas.py  room_user_schemas.py
app/services/: service_dependencies.py
app/workers/: __init__.py  tasks.py  worker_settings.py
scripts/: deploy.sh  reset_db_with_pgvector.sql  run_complexity_analysis.sh  run_mypy.sh
tests/: conftest.py
tests/e2e/: conftest.py  test_ai_endpoints.py  test_ai_models.py  test_auth_workflows.py  test_conversation_details.py  test_conversation_messages.py  test_conversation_participants.py  (+4 more)
(+66 files in other folders)
